--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather-app",
-  "homepage": "https://igorivanter.github.io/",
+  "homepage": "https://igorivanter.github.io/weather-around-the-world",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
